// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopNav/> render with default/require d props 1`] = `
<nav
  className="topnav "
  data-cy="topnav"
  label="{{label}}"
>
  <Link
    className="topnav__link"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="topnav__logo"
      src="/assets/img/1.png"
    />
  </Link>
  <SectionHandler
    button={[Function]}
    className=""
    data-cy="topnav-postcode_tree"
  >
    <Query
      data-cy=""
      onMount={[Function]}
    >
      <Component />
    </Query>
  </SectionHandler>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/anna-liepina/explore-cwa-react"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="topnav__github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;

exports[`<TopNav/> render with optional props [::className] as "{{className}}" 1`] = `
<nav
  className="topnav {{className}}"
  data-cy="topnav"
  label="{{label}}"
>
  <Link
    className="topnav__link"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="topnav__logo"
      src="/assets/img/1.png"
    />
  </Link>
  <SectionHandler
    button={[Function]}
    className=""
    data-cy="topnav-postcode_tree"
  >
    <Query
      data-cy=""
      onMount={[Function]}
    >
      <Component />
    </Query>
  </SectionHandler>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/anna-liepina/explore-cwa-react"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="topnav__github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;

exports[`<TopNav/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<nav
  className="topnav "
  data-cy="{{data-cy}}topnav"
  label="{{label}}"
>
  <Link
    className="topnav__link"
    to="/"
  >
    <img
      alt="Logo"
      className="topnav__logo--main"
      data-cy="{{data-cy}}topnav__logo"
      src="/assets/img/1.png"
    />
  </Link>
  <SectionHandler
    button={[Function]}
    className=""
    data-cy="topnav-postcode_tree"
  >
    <Query
      data-cy=""
      onMount={[Function]}
    >
      <Component />
    </Query>
  </SectionHandler>
  <Link
    className="topnav__link--github"
    target="_blank"
    to="//github.com/anna-liepina/explore-cwa-react"
  >
    <img
      alt="GitHub logo"
      className="topnav__logo--github"
      data-cy="{{data-cy}}topnav__github"
      src="/assets/img/github-logo.png"
    />
  </Link>
</nav>
`;
